--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "@material-ui/core": "^3.1.2",
     "@material-ui/icons": "^3.0.1",
     "bootstrap": "^4.1.3",
+    "mathjs": "^5.2.0",
+    "prop-types": "^15.6.2",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
     "react-router": "^4.3.1",
